export const snapshot = {};

snapshot[`Notification Read Command - Help Text 1`] = `
stdout:
"
Usage: read <notificationId>

Description:

  Mark a notification as read

Options:

  -h, --help                 - Show this help.                                 
  -j, --json                 - Output as JSON                                  
  --timeout-ms  <timeoutMs>  - Timeout for write confirmation in milliseconds  

"
stderr:
""
`;

snapshot[`Notification Read Command - Marks As Read 1`] = `
stdout:
"✓ Marked notification as read: notif-1
"
stderr:
""
`;

snapshot[`Notification Read Command - JSON Output 1`] = `
stdout:
'{
  "id": "notif-1",
  "title": "ENG-123 was assigned to you",
  "readAt": "2026-03-13T07:00:00Z",
  "archivedAt": null,
  "noOp": false,
  "receipt": {
    "operationId": "notification.read",
    "resource": "notification",
    "action": "read",
    "resolvedRefs": {
      "notificationId": "notif-1"
    },
    "appliedChanges": [
      "readAt"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "continue"
  }
}
'
stderr:
""
`;

snapshot[`Notification Read Command - Already Read 1`] = `
stdout:
'{
  "id": "notif-1",
  "title": "ENG-123 was assigned to you",
  "readAt": "2026-03-13T07:00:00Z",
  "archivedAt": null,
  "noOp": true,
  "receipt": {
    "operationId": "notification.read",
    "resource": "notification",
    "action": "read",
    "resolvedRefs": {
      "notificationId": "notif-1"
    },
    "appliedChanges": [],
    "noOp": true,
    "partialSuccess": false,
    "nextSafeAction": "continue"
  }
}
'
stderr:
""
`;
